Fixed dark mode logo
Changes at 00:04 - not for evaluation - fixed sign-up-email.hmtl logo not changing in dark mode

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -109,13 +109,13 @@ body.dark {
   body.dark .footer {
     background: #646464; }
 
-.mainLogo {
+.mb-4 {
   background-image: url(../images/nav-logo-dark.png);
   background-size: cover;
   min-width: 200px;
   min-height: 57px; }
 
-.mainLogo.dark {
+.mb-4.dark {
   background-image: url(../images/nav-logo-light.png);
   background-size: cover;
   min-width: 200px;
