--- a/assets/scss/_form.scss
+++ b/assets/scss/_form.scss
@@ -1,11 +1,11 @@
-.mainLogo {
+.mb-4 {
     background-image: $nav-logo-dark;
     background-size: cover;
     min-width: 200px;
     min-height: 57px;
 }
 
-.mainLogo.dark {
+.mb-4.dark {
     background-image: $nav-logo-light;
     background-size: cover;
     min-width: 200px;
